erDiagram
    curriculums ||--o{ review_video_sets : "bo chung"
    classes ||--o{ review_video_sets : "bo rieng lop"
    review_video_sets ||--o{ review_videos : "video trong bo"
    review_video_sets ||--o{ review_video_sets_history : ""
    curriculum_subjects ||--o{ review_video_sets : ""
    users ||--o{ review_video_sets : "GV tao"
    review_videos ||--o{ review_video_progress : "tien do xem"
    students ||--o{ review_video_progress : ""

    review_video_sets {
        BIGSERIAL id PK
        UUID uuid UK
        VARCHAR code
        VARCHAR title
        VARCHAR video_type
        BIGINT curriculum_id FK
        BIGINT class_id FK
        BIGINT subject_id FK
        INT display_order
        VARCHAR status
        TIMESTAMPTZ published_at
        BIGINT created_by FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    review_videos {
        BIGSERIAL id PK
        BIGINT review_video_set_id FK
        VARCHAR title
        VARCHAR source_type
        VARCHAR file_url
        BIGINT file_size_bytes
        INT duration_seconds
        INT display_order
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    review_video_progress {
        BIGSERIAL id PK
        BIGINT review_video_id FK
        BIGINT student_id FK
        INT watched_seconds
        BOOLEAN is_completed
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
